# cers-coder

./: .env.example  .gitignore  0.request.md  Dockerfile  FIXES_DEMO.md  PROJECT_SUMMARY.md  README.md  docker-compose.simple.yaml  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: README.md  architecture.md  user_guide.md
src/cers_coder/: __init__.py  main.py
src/cers_coder/agents/: __init__.py  pm_agent.py  requirement_agent.py
src/cers_coder/core/: __init__.py  base_agent.py  file_parser.py  message.py  operation_recorder.py  service_manager.py  state_manager.py  workflow.py  workspace_manager.py
src/cers_coder/llm/: __init__.py  model_config.py  ollama_client.py
src/cers_coder/templates/api-service/: 0.request.md
src/cers_coder/templates/web-app/: 0.request.md
src/cers_coder/utils/: __init__.py  file_utils.py  logger.py
tests/: test_core.py  test_integration.py
workspaces/: workspaces.json
workspaces/e2891744-e2f5-4a00-880e-346a720435cb/: README.md  workspace.json
workspaces/e2891744-e2f5-4a00-880e-346a720435cb/output/review/: .gitkeep
workspaces/test1/: 0.request.md  1.rule.md  2.tech.md  3.example.md
workspaces/test1/output/: DEMO.md  README.md
workspaces/test1/output/src/: index.html
workspaces/test1/output/src/css/: main.css
workspaces/test1/output/src/js/: main.js
workspaces/test1/output/src/js/game/: Bubble.js  BubbleGrid.js  Shooter.js
workspaces/test1/workspaces/: workspaces.json
workspaces/test1/workspaces/68a88d65-9939-4804-bf69-be014873d7ea/: README.md  workspace.json
workspaces/test1/workspaces/68a88d65-9939-4804-bf69-be014873d7ea/backup/: .gitkeep
workspaces/test1/workspaces/68a88d65-9939-4804-bf69-be014873d7ea/input/: .gitkeep
workspaces/test1/workspaces/68a88d65-9939-4804-bf69-be014873d7ea/records/: .gitkeep
